tests/pass/too_many.us
fn id<T>(v:T) -> T {
    v;
}

fn main() -> u8 {
    id::<i32,i32>('c');
}